Add mode temperature data to notes.

--- a/cooling/cooling.tex
+++ b/cooling/cooling.tex
@@ -652,6 +652,32 @@ where the integral is over a resonance and $k_B$ is Boltzmann's
 constant.\todo{Need better nomenclature here to make $\omega$
   less confusing. Also need to figure out proper normalization}
 \todo{Make plot of $T(\omega)$.}
+\begin{figure}
+  \includegraphics{./figures/fig_high_modes.pdf}
+  \caption{Spectrum of highest few modes.}
+  \label{fig:spectrum_closeup}
+\end{figure}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+      Mode number&Mode frequency&$T_\omega/\hbar\omega$&$T_\omega/T_{\rm Doppler}$\\
+      \hline
+      0&  \SI{1.580532}{\mega\hertz}&  \SI{1.924359e+02}{}&  \SI{3.379457e+01}{}\\
+      1&  \SI{1.553344}{\mega\hertz}&  \SI{1.531891e+02}{}&  \SI{2.643947e+01}{}\\
+      2&  \SI{1.552781}{\mega\hertz}&  \SI{2.528734e+01}{}&  \SI{4.362855e+00}{}\\
+      3&  \SI{1.532620}{\mega\hertz}&  \SI{1.033486e+02}{}&  \SI{1.759935e+01}{}\\
+      4&  \SI{1.532467}{\mega\hertz}&  \SI{6.318992e+01}{}&  \SI{1.075960e+01}{}\\
+      5&  \SI{1.515915}{\mega\hertz}&  \SI{2.115010e+01}{}&  \SI{3.562417e+00}{}\\
+      6&  \SI{1.515464}{\mega\hertz}&  \SI{5.967727e+00}{}&  \SI{1.004875e+00}{}\\
+      7&  \SI{1.511197}{\mega\hertz}&  \SI{4.207211e+01}{}&  \SI{7.064359e+00}{}\\
+      8&  \SI{1.501334}{\mega\hertz}&  \SI{5.175048e+01}{}&  \SI{8.632753e+00}{}\\
+      \hline
+    \end{tabular}
+  \end{center}
+  \caption{Mode temperatures of the highest few eigenmodes.}
+  \label{tab:ModeTemperatures}
+\end{table}
 
 \subsection{In-plane modes}
 
