Fix a typo (frace -> frac)

--- a/cooling/axial_thermometry.tex
+++ b/cooling/axial_thermometry.tex
@@ -201,7 +201,7 @@ its resonance is well resolved. In that case we can integrate the
 power spectral density over the resonance. We find
 \begin{equation}
   \int_{\omega_m-\Delta}^{\omega_m+\Delta} I(\omega)\,d\omega =
-  \frace{\pi a^2}{T}\left| \alpha_m \right|^2\;,
+  \frac{\pi a^2}{T}\left| \alpha_m \right|^2\;,
 \end{equation}
 where we have assume that $\Delta\gg T^{-1}$. Solving for
 $|\alpha_m|^2$ and inserting in the expression for the mode
