Fix preamble of cooling.tex

--- a/cooling/cooling.tex
+++ b/cooling/cooling.tex
@@ -1,5 +1,7 @@
 % -*- mode: latex; fill-column: 65; -*-
 \documentclass[aps, pra, preprint]{revtex4-1}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{siunitx}
